# P-insight-Beta-version

./: .gitignore  AUDIT_REPORT.md  DEPLOYMENT.md  MASTER_ACTION_PLAN.md  P-Insight_Production_Roadmap.md  PROJECT_README.md  README.md  docker-compose.dev.yml  ~$Insight_Intelligence_Package.docx
backend/: .env.example  alembic.ini  main.py  migrate_watchlist.py  openapi.json  pyproject.toml  requirements-lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_initial_schema.py  20260719_4fdb2a49229c_initial_schema.py  20260719_e0c9b9255b45_add_users_and_tenancy_user_id.py
backend/app/: main.py
backend/app/analytics/: benchmark.py  commentary.py  correlation.py  optimization.py  quant_service.py  returns.py  risk.py
backend/app/connectors/: __init__.py  base.py  ibkr.py  registry.py  zerodha.py
backend/app/core/: auth.py  config.py  dependencies.py  errors.py  feature_flags.py  logging.py  security.py
backend/app/data_providers/: base.py  broker_provider.py  file_provider.py  live_provider.py  mock_provider.py  uploaded_provider.py
backend/app/db/: base.py  database.py  init_db.py  session.py
backend/app/ingestion/: __init__.py  column_detector.py  normalizer.py  sector_enrichment.py
backend/app/lib/: delta.py
backend/app/models/: __init__.py  background_job.py  broker_connection.py  history.py  portfolio.py  snapshot.py  user.py
backend/app/modules/: README.md  __init__.py
backend/app/optimization/: __init__.py  covariance.py  expected_returns.py  frontier.py  objectives.py  optimizer_service.py  types.py
backend/app/repositories/: portfolio_repository.py  snapshot_repository.py
backend/app/schemas/: advisor.py  broker.py  optimization.py  portfolio.py  portfolio_mgmt.py  quant.py  snapshot.py  system.py  upload.py  upload_v2.py
backend/app/services/: ai_advisor_service.py  background_job_service.py  broker_service.py  cache_service.py  context_builder.py  feature_registry.py  fundamentals_view_service.py  history_service.py  (+11 more)
backend/mock_data/: portfolio.json
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_advisor_boundaries.py  test_auth_tenancy.py  test_cache_services.py  test_feature_registry_contract.py  test_history_contracts.py  test_isolated_upload_module.py  test_market_overview_contract.py  test_migration_contract.py  test_news_contract.py  test_openapi_contract.py  test_peer_comparison_contract.py  test_portfolio_contracts.py  test_portfolio_read_boundary.py  test_price_enrichment_contract.py  test_quant_analytics_contract.py  test_system_contracts.py  test_tenancy_isolation.py  test_upload_contracts.py  test_uploaded_provider_contract.py
(+253 files in other folders)
