[tool.poetry]
name = "p-insight-backend"
version = "0.1.0"
description = "P-Insight Portfolio Analytics Backend"
authors = ["Dhruv Tantia <dhruvtantia6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
openpyxl = "^3.1.2"

# Phase 2 dependencies
yfinance = "^0.2.50"
httpx = "^0.27.0"
# PyPortfolioOpt = "^1.5.5"
# scipy = "^1.11.0"

# Phase 3 dependencies (uncomment when ready)
# anthropic = "^0.34.0"
# kiteconnect = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
