[tool.poetry]
name = "p-insight-backend"
version = "0.1.0"
description = "P-Insight Portfolio Analytics Backend"
authors = ["Dhruv Tantia <dhruvtantia6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
numpy = ">=1.26,<3.0"  # scipy>=1.18 requires numpy 2.x; verified compatible with pandas 2.3
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
openpyxl = "^3.1.2"

# Persistence / migrations (Phase 0 — production hardening)
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"

# Auth & tenancy (Phase 1) — verifies Supabase HS256 access tokens.
pyjwt = ">=2.8,<3"

# Market data
yfinance = "^0.2.50"
httpx = "^0.27.0"

# Optimization engine — enables real SLSQP frontier (scipy) and
# Ledoit-Wolf/OAS covariance shrinkage (scikit-learn). Without these the
# optimizer silently degrades to Monte-Carlo sampling + sample covariance.
scipy = "^1.11.0"
scikit-learn = "^1.3.0"

# AI advisor — Claude provider (soft-imported in services/ai/provider.py).
anthropic = ">=0.39,<1.0"

# Broker sync (Phase 6, Account Aggregator route) — enable when ready.
# kiteconnect = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
